Fixed unused code

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -195,15 +195,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Executa a consulta SQL para buscar todos os \n",
-    "# registros da tabela 'pessoa' no banco PostgreSQL \n",
-    "# e carrega o resultado em um DataFrame do pandas\n",
-    "\n",
-    "\n",
-    "query = \"select * from pessoa;\" \n",
-    "df = pd.read_sql_query(query, cnx)\n",
-    "\n",
-    "df.head()"
+    "# Teste de conexão - comentado na versão final\n",
+    "# query = \"select * from pessoa;\" \n",
+    "# df = pd.read_sql_query(query, cnx)\n",
+    "# df.head()"
    ]
   },
   {
@@ -272,43 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef4d62b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variável auxiliar para consultas sem filtro\n",
-    "flag=''\n",
-    "\n",
-    "# Widgets de entrada de dados\n",
-    "def create_form_widgets():\n",
-    "    return {\n",
-    "        \"nome\": pn.widgets.TextInput(\n",
-    "            name=\"Nome\",\n",
-    "            placeholder=\"Digite o nome\",\n",
-    "            sizing_mode=\"stretch_width\"\n",
-    "        ),\n",
-    "        \"cpf\": pn.widgets.TextInput(\n",
-    "            name=\"CPF\",\n",
-    "            placeholder=\"Digite o CPF\",\n",
-    "            sizing_mode=\"stretch_width\"\n",
-    "        ),\n",
-    "        \"datanasc\": pn.widgets.DatePicker(name=\"Data de Nascimento\"),\n",
-    "        \"sexo\": pn.widgets.RadioBoxGroup(\n",
-    "            name=\"Sexo\",\n",
-    "            options=[\"Não Informado\", \"M\", \"F\"],\n",
-    "            inline=True\n",
-    "        ),\n",
-    "        \"salario\": pn.widgets.FloatInput(\n",
-    "            name=\"Salário\",\n",
-    "            value=1000,\n",
-    "            start=0\n",
-    "        )\n",
-    "    }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a3349255",
    "metadata": {},
    "outputs": [],
@@ -317,10 +275,7 @@
     "buttonConsultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
     "buttonInserir = pn.widgets.Button(name='Inserir', button_type='success')\n",
     "buttonExcluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
-    "buttonAtualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
-    "\n",
-    "# Botão para voltar à Home (na tela CRUD)\n",
-    "buttonVoltar = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')\n"
+    "buttonAtualizar = pn.widgets.Button(name='Atualizar', button_type='warning')"
    ]
   },
   {
@@ -341,7 +296,10 @@
     "    \"\"\"Consulta pelo CPF ou retorna todos.\"\"\"\n",
     "    try:\n",
     "        cpf = w[\"cpf\"].value\n",
-    "        query = f\"SELECT * FROM pessoa WHERE ('{cpf}'='{flag}' OR cpf='{cpf}')\"\n",
+    "        if cpf == \"\":\n",
+    "            query = \"SELECT * FROM pessoa\"\n",
+    "        else:\n",
+    "            query = f\"SELECT * FROM pessoa WHERE cpf='{cpf}'\"\n",
     "        df = pd.read_sql_query(query, cnx)\n",
     "        return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
     "    except Exception as e:\n",
@@ -421,11 +379,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cria uma ligação interativa (bind) entre os botões e a função que executa a ação correspondente,\n",
-    "# atualizando a tabela na interface sempre que algum botão for clicado.\n",
+    "# Cria widgets fixos (mantém referências)\n",
     "\n",
-    "# Conecta os botões à tabela interativa\n",
-    "form_widgets = create_form_widgets()\n",
+    "form_widgets = {\n",
+    "    \"nome\": pn.widgets.TextInput(name=\"Nome\", placeholder=\"Digite o nome\", sizing_mode=\"stretch_width\"),\n",
+    "    \"cpf\": pn.widgets.TextInput(name=\"CPF\", placeholder=\"Digite o CPF\", sizing_mode=\"stretch_width\"),\n",
+    "    \"datanasc\": pn.widgets.DatePicker(name=\"Data de Nascimento\"),\n",
+    "    \"sexo\": pn.widgets.RadioBoxGroup(name=\"Sexo\", options=[\"Não Informado\", \"M\", \"F\"], inline=True),\n",
+    "    \"salario\": pn.widgets.FloatInput(name=\"Salário\", value=1000, start=0)\n",
+    "}\n",
     "\n",
     "def create_interactive_table():\n",
     "    return pn.bind(\n",
@@ -526,13 +488,12 @@
     "def create_graficos_view():\n",
     "    graficos_layout = pn.Column(\n",
     "        pn.pane.Markdown(\"### 📊 Análise de Funcionários\"),\n",
-    "        grafico_salario_por_sexo,\n",
-    "        grafico_distribuicao_salario,\n",
+    "        grafico_salario_por_sexo(),    # ← Chama a função\n",
+    "        grafico_distribuicao_salario(), # ← Chama a função\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
     "        margin=(20,20,20,20)\n",
     "    )\n",
-    "    \n",
     "    return graficos_layout"
    ]
   },
