Fixed blank page after returning to main screen.

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -205,19 +205,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "224f5c25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Criação da Home sem conectar os cliques ainda\n",
-    "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
-    "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "# btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ce7efb6c",
    "metadata": {},
    "outputs": [],
@@ -226,33 +213,31 @@
     "main_area = pn.Column()\n",
     "\n",
     "def create_home_view():\n",
+    "    # Create fresh button instances every time\n",
+    "    btn_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
+    "    btn_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
+    "    btn_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
+    "    btn_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)\n",
+    "    \n",
+    "    # Connect their clicks\n",
+    "    btn_crud.on_click(lambda event: go_to_crud())\n",
+    "    btn_graficos.on_click(lambda event: go_to_graficos())\n",
+    "    btn_campanhas.on_click(lambda event: go_to_campanhas())\n",
+    "    btn_doacoes.on_click(lambda event: go_to_doacoes())\n",
+    "    \n",
     "    home = pn.Column(\n",
     "        pn.pane.Markdown(\"## 🏠 Tela Inicial\"),\n",
     "        pn.pane.Markdown(\"Escolha uma opção abaixo:\"),\n",
     "        pn.Spacer(height=20),\n",
-    "        btn_go_crud,\n",
-    "        btn_go_graficos,\n",
-    "        btn_go_campanhas,\n",
-    "        btn_go_doacoes,\n",
+    "        btn_crud,\n",
+    "        btn_graficos,\n",
+    "        btn_campanhas,\n",
+    "        btn_doacoes,\n",
     "        align=\"center\",\n",
     "        sizing_mode=\"stretch_width\",\n",
     "        margin=(50,50,50,50)\n",
     "    )\n",
     "    return home"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e932c321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Criação dos botões da Home\n",
-    "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
-    "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
-    "btn_go_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)"
    ]
   },
   {
@@ -277,7 +262,12 @@
    "source": [
     "def create_btn_voltar():\n",
     "    btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')\n",
-    "    btn_voltar_home.on_click(lambda e: main_area.clear() or main_area.append(create_home_view()))\n",
+    "    \n",
+    "    def voltar_action(event):\n",
+    "        main_area.clear()\n",
+    "        main_area.append(create_home_view())\n",
+    "    \n",
+    "    btn_voltar_home.on_click(voltar_action)\n",
     "    return btn_voltar_home"
    ]
   },
@@ -1091,37 +1081,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ce79858",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Conecta os botões da Home às funções de navegação\n",
-    "btn_go_crud.on_click(lambda event: go_to_crud())\n",
-    "btn_go_graficos.on_click(lambda event: go_to_graficos())\n",
-    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n",
-    "btn_go_doacoes.on_click(lambda event: go_to_doacoes())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5bbf052",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inicializa com a tela Home\n",
-    "go_to_home()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e50f9bcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# App principal, com título, menu superior e área dinâmica\n",
     "# App principal, com título e área dinâmica\n",
+    "# Inicializa com a home\n",
+    "main_area.append(create_home_view())\n",
+    "\n",
     "pn.Column(\n",
     "    pn.pane.Markdown(\"# 🎁 Sistema de Doações\"),\n",
     "    main_area\n",
