Refactor institution selection widget to use AutocompleteInput for better user experience
- Changed the institution selection widget from Select to AutocompleteInput.
- Updated options to display institution names and added a placeholder for user guidance.
- Modified the insertion logic to retrieve CPF/CNPJ based on the selected institution name.
- Added validation to ensure the selected institution is valid before proceeding with the database insertion.

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -836,10 +836,12 @@
     "\n",
     "# Widgets para campanhas\n",
     "instituicoes_dict = get_instituicoes()\n",
-    "instituicoes_select = pn.widgets.Select(\n",
+    "instituicoes_select = pn.widgets.AutocompleteInput(\n",
     "    name=\"Instituição\",\n",
-    "    options=instituicoes_dict,\n",
-    "    sizing_mode=\"stretch_width\"\n",
+    "    options=list(instituicoes_dict.keys()),  # ← Lista de nomes\n",
+    "    placeholder=\"Digite o nome da instituição\",\n",
+    "    sizing_mode=\"stretch_width\",\n",
+    "    value=\"\"  # ← Começa vazio\n",
     ")\n",
     "\n",
     "nome_campanha = pn.widgets.TextInput(\n",
@@ -895,11 +897,18 @@
     "            pn.state.notifications.warning('Instituição e Nome são obrigatórios!')\n",
     "            return\n",
     "        \n",
+    "        # Busca o CPF/CNPJ pelo nome selecionado\n",
+    "        cpf_cnpj_instituicao = instituicoes_dict.get(instituicoes_select.value)\n",
+    "        \n",
+    "        if not cpf_cnpj_instituicao:\n",
+    "            pn.state.notifications.warning('Instituição inválida!')\n",
+    "            return\n",
+    "        \n",
     "        cursor = con.cursor()\n",
     "        cursor.execute(\n",
     "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
     "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
-    "            (instituicoes_select.value, nome_campanha.value,\n",
+    "            (cpf_cnpj_instituicao, nome_campanha.value,  # ← Use cpf_cnpj_instituicao\n",
     "             data_inicio.value, data_fim.value, status_campanha.value)\n",
     "        )\n",
     "        con.commit()\n",
