A funcionalidade de consultar foi adicionada a o gerenciador de campanhas junto com bugfixes

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -256,6 +256,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e932c321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criação dos botões da Home\n",
+    "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
+    "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
+    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
+    "btn_go_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "17f3f9a0",
    "metadata": {},
    "outputs": [],
@@ -836,12 +850,11 @@
     "\n",
     "# Widgets para campanhas\n",
     "instituicoes_dict = get_instituicoes()\n",
-    "instituicoes_select = pn.widgets.AutocompleteInput(\n",
+    "instituicoes_select = pn.widgets.TextInput(\n",
     "    name=\"Instituição\",\n",
-    "    options=list(instituicoes_dict.keys()),  # ← Lista de nomes\n",
     "    placeholder=\"Digite o nome da instituição\",\n",
     "    sizing_mode=\"stretch_width\",\n",
-    "    value=\"\"  # ← Começa vazio\n",
+    "    value=\"\"\n",
     ")\n",
     "\n",
     "nome_campanha = pn.widgets.TextInput(\n",
@@ -862,8 +875,8 @@
     "\n",
     "status_campanha = pn.widgets.Select(\n",
     "    name=\"Status\",\n",
-    "    options=[\"Planejada\", \"Ativa\", \"Inativa\", \"Concluída\"],\n",
-    "    value=\"Planejada\",\n",
+    "    options=[\"N/A\", \"Planejada\", \"Ativa\", \"Inativa\", \"Concluída\"],\n",
+    "    value=\"N/A\",\n",
     "    sizing_mode=\"stretch_width\"\n",
     ")\n",
     "\n",
@@ -875,40 +888,100 @@
     "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar', button_type='light')\n",
     "\n",
     "def on_consultar_campanhas(event):\n",
-    "    \"\"\"Consulta todas as campanhas\"\"\"\n",
+    "    \"\"\"Consulta campanhas com filtro por instituição, nome, datas e status. Se vazio, retorna todas.\"\"\"\n",
     "    try:\n",
-    "        query = \"\"\"\n",
+    "        termo_instituicao = instituicoes_select.value.strip()\n",
+    "        termo_campanha = nome_campanha.value.strip()\n",
+    "        data_ini = data_inicio.value\n",
+    "        data_fim_val = data_fim.value\n",
+    "        status_selecionado = status_campanha.value\n",
+    "        \n",
+    "        # Construir a query base\n",
+    "        query_base = \"\"\"\n",
     "        SELECT c.id_campanha, u.nome AS instituicao, c.nome, \n",
     "               c.data_inicio, c.data_fim, c.status\n",
     "        FROM campanha c\n",
     "        JOIN instituicao i ON c.cpf_cnpj_i = i.cpf_cnpj_i\n",
     "        JOIN usuario u ON i.cpf_cnpj_i = u.cpf_cnpj\n",
-    "        ORDER BY c.data_inicio DESC\n",
+    "        WHERE 1=1\n",
     "        \"\"\"\n",
-    "        df = pd.read_sql_query(query, engine)\n",
+    "        \n",
+    "        params = []\n",
+    "        \n",
+    "        # Filtros de Texto\n",
+    "        if termo_instituicao:\n",
+    "            query_base += \" AND u.nome ILIKE %s\"\n",
+    "            params.append(f\"%{termo_instituicao}%\")\n",
+    "        \n",
+    "        if termo_campanha:\n",
+    "            query_base += \" AND c.nome ILIKE %s\"\n",
+    "            params.append(f\"%{termo_campanha}%\")\n",
+    "        \n",
+    "        # Filtro de Status (só aplica se não for \"N/A\")\n",
+    "        if status_selecionado != \"N/A\":\n",
+    "            query_base += \" AND c.status = %s\"\n",
+    "            params.append(status_selecionado)\n",
+    "        \n",
+    "        # --- Lógica para filtros de data ---\n",
+    "        if data_ini and data_fim_val:\n",
+    "            # Intervalo: data_inicio >= inicio E data_fim <= fim\n",
+    "            query_base += \" AND c.data_inicio >= %s::date AND c.data_fim <= %s::date\"\n",
+    "            params.append(str(data_ini))\n",
+    "            params.append(str(data_fim_val))\n",
+    "\n",
+    "        elif data_ini:\n",
+    "            # Data exata no início\n",
+    "            query_base += \" AND c.data_inicio = %s::date\"\n",
+    "            params.append(str(data_ini))\n",
+    "\n",
+    "        elif data_fim_val:\n",
+    "            # Data exata no fim\n",
+    "            query_base += \" AND c.data_fim = %s::date\"\n",
+    "            params.append(str(data_fim_val))\n",
+    "        \n",
+    "        query_base += \" ORDER BY c.data_inicio DESC\"\n",
+    "        \n",
+    "        # Executa a query\n",
+    "        if params:\n",
+    "            df = pd.read_sql_query(query_base, engine, params=tuple(params))\n",
+    "        else:\n",
+    "            df = pd.read_sql_query(query_base, engine)\n",
+    "        \n",
+    "        if df.empty:\n",
+    "            return pn.pane.Alert('❌ Nenhuma campanha encontrada com esses critérios de busca', alert_type='warning')\n",
     "        return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
     "    except Exception as e:\n",
-    "        return pn.pane.Alert(f'Erro ao consultar: {str(e)}', alert_type='danger')\n",
+    "        return pn.pane.Alert(f'❌ Erro ao consultar: {str(e)}', alert_type='danger')\n",
     "\n",
     "def on_criar_campanha(event):\n",
     "    \"\"\"Cria uma nova campanha\"\"\"\n",
     "    try:\n",
-    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "        termo_busca = instituicoes_select.value.strip()\n",
+    "        \n",
+    "        if not termo_busca or not nome_campanha.value:\n",
     "            pn.state.notifications.warning('Instituição e Nome são obrigatórios!')\n",
     "            return\n",
     "        \n",
-    "        # Busca o CPF/CNPJ pelo nome selecionado\n",
-    "        cpf_cnpj_instituicao = instituicoes_dict.get(instituicoes_select.value)\n",
+    "        # Busca a instituição exata (não parcial) pelo nome digitado\n",
+    "        cursor = con.cursor()\n",
+    "        cursor.execute(\n",
+    "            \"SELECT u.cpf_cnpj FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome = %s\",\n",
+    "            (termo_busca,)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        cursor.close()\n",
     "        \n",
-    "        if not cpf_cnpj_instituicao:\n",
-    "            pn.state.notifications.warning('Instituição inválida!')\n",
+    "        if not result:\n",
+    "            pn.state.notifications.warning('Instituição não encontrada! Digite o nome exato.')\n",
     "            return\n",
+    "        \n",
+    "        cpf_cnpj_instituicao = result[0]\n",
     "        \n",
     "        cursor = con.cursor()\n",
     "        cursor.execute(\n",
     "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
     "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
-    "            (cpf_cnpj_instituicao, nome_campanha.value,  # ← Use cpf_cnpj_instituicao\n",
+    "            (cpf_cnpj_instituicao, nome_campanha.value,\n",
     "             data_inicio.value, data_fim.value, status_campanha.value)\n",
     "        )\n",
     "        con.commit()\n",
@@ -916,6 +989,7 @@
     "        pn.state.notifications.success('Campanha criada com sucesso!')\n",
     "        \n",
     "        # Limpar campos\n",
+    "        instituicoes_select.value = \"\"\n",
     "        nome_campanha.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
@@ -930,16 +1004,32 @@
     "def on_atualizar_campanha(event):\n",
     "    \"\"\"Atualiza uma campanha existente com novos dados\"\"\"\n",
     "    try:\n",
-    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "        termo_busca = instituicoes_select.value.strip()\n",
+    "        \n",
+    "        if not termo_busca or not nome_campanha.value:\n",
     "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
     "            return\n",
     "        \n",
     "        cursor = con.cursor()\n",
     "        \n",
+    "        # Busca o CPF/CNPJ da instituição\n",
+    "        cursor.execute(\n",
+    "            \"SELECT u.cpf_cnpj FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome = %s\",\n",
+    "            (termo_busca,)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Instituição não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        cpf_cnpj = result[0]\n",
+    "        \n",
     "        # Verifica se a campanha existe\n",
     "        cursor.execute(\n",
     "            \"SELECT id_campanha FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
-    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "            (cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        result = cursor.fetchone()\n",
     "        \n",
@@ -948,18 +1038,19 @@
     "            pn.state.notifications.warning('Campanha não encontrada!')\n",
     "            return\n",
     "        \n",
-    "        # Atualiza a campanha com os novos dados\n",
+    "        # Atualiza a campanha\n",
     "        cursor.execute(\n",
     "            \"\"\"UPDATE campanha SET data_inicio=%s, data_fim=%s, status=%s\n",
     "               WHERE cpf_cnpj_i=%s AND nome=%s\"\"\",\n",
     "            (data_inicio.value, data_fim.value, status_campanha.value,\n",
-    "             instituicoes_select.value, nome_campanha.value)\n",
+    "             cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
     "        pn.state.notifications.success('Campanha atualizada com sucesso!')\n",
     "        \n",
     "        # Limpar campos\n",
+    "        instituicoes_select.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
     "        status_campanha.value = \"Planejada\"\n",
@@ -974,16 +1065,32 @@
     "def on_excluir_campanha(event):\n",
     "    \"\"\"Exclui uma campanha\"\"\"\n",
     "    try:\n",
-    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "        termo_busca = instituicoes_select.value.strip()\n",
+    "        \n",
+    "        if not termo_busca or not nome_campanha.value:\n",
     "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
     "            return\n",
     "        \n",
     "        cursor = con.cursor()\n",
     "        \n",
+    "        # Busca o CPF/CNPJ da instituição\n",
+    "        cursor.execute(\n",
+    "            \"SELECT u.cpf_cnpj FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome = %s\",\n",
+    "            (termo_busca,)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Instituição não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        cpf_cnpj = result[0]\n",
+    "        \n",
     "        # Verifica se a campanha existe\n",
     "        cursor.execute(\n",
     "            \"SELECT id_campanha FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
-    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "            (cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        result = cursor.fetchone()\n",
     "        \n",
@@ -995,13 +1102,14 @@
     "        # Deleta a campanha\n",
     "        cursor.execute(\n",
     "            \"DELETE FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
-    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "            (cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
     "        pn.state.notifications.success('Campanha excluída com sucesso!')\n",
     "        \n",
     "        # Limpar campos\n",
+    "        instituicoes_select.value = \"\"\n",
     "        nome_campanha.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
@@ -1016,14 +1124,31 @@
     "def on_ativar_inativar(event):\n",
     "    \"\"\"Alterna o status da campanha entre Ativa e Inativa\"\"\"\n",
     "    try:\n",
-    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "        termo_busca = instituicoes_select.value.strip()\n",
+    "        \n",
+    "        if not termo_busca or not nome_campanha.value:\n",
     "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
     "            return\n",
     "        \n",
     "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Busca o CPF/CNPJ da instituição\n",
+    "        cursor.execute(\n",
+    "            \"SELECT u.cpf_cnpj FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome = %s\",\n",
+    "            (termo_busca,)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Instituição não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        cpf_cnpj = result[0]\n",
+    "        \n",
     "        cursor.execute(\n",
     "            \"SELECT status FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
-    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "            (cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        result = cursor.fetchone()\n",
     "        \n",
@@ -1037,7 +1162,7 @@
     "        \n",
     "        cursor.execute(\n",
     "            \"UPDATE campanha SET status=%s WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
-    "            (novo_status, instituicoes_select.value, nome_campanha.value)\n",
+    "            (novo_status, cpf_cnpj, nome_campanha.value)\n",
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
@@ -1045,6 +1170,7 @@
     "        \n",
     "        # Atualizar o widget e limpar\n",
     "        status_campanha.value = novo_status\n",
+    "        instituicoes_select.value = \"\"\n",
     "        nome_campanha.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
@@ -1102,6 +1228,20 @@
     "    pn.pane.Markdown(\"# 🎁 Sistema de Doações\"),\n",
     "    main_area\n",
     ").servable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce79858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conecta os botões da Home às funções de navegação\n",
+    "btn_go_crud.on_click(lambda event: go_to_crud())\n",
+    "btn_go_graficos.on_click(lambda event: go_to_graficos())\n",
+    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n",
+    "btn_go_doacoes.on_click(lambda event: go_to_doacoes())"
    ]
   },
   {
