Refactor campaign button labels and improve error handling in CRUD panel
- Updated button names for better clarity: 'Consultar', 'Criar', 'Atualizar', 'Excluir', and 'Ativar/Inativar' now include 'Campanha'.
- Enhanced error messages for mandatory fields in campaign creation.
- Changed institution search to use case-insensitive matching.
- Improved handling of multiple institutions found during search.
- Set default status for new campaigns to 'Planejada' and adjusted notifications accordingly.

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -881,11 +881,11 @@
     ")\n",
     "\n",
     "# Botões de ações para campanhas\n",
-    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar', button_type='primary')\n",
-    "btn_criar_campanha = pn.widgets.Button(name='Inserir', button_type='success')\n",
-    "btn_atualizar_campanha = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
-    "btn_excluir_campanha = pn.widgets.Button(name='Excluir', button_type='danger')\n",
-    "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar', button_type='light')\n",
+    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar Campanha', button_type='primary')\n",
+    "btn_criar_campanha = pn.widgets.Button(name='Criar Campanha', button_type='success')\n",
+    "btn_atualizar_campanha = pn.widgets.Button(name='Atualizar Campanha', button_type='warning')\n",
+    "btn_excluir_campanha = pn.widgets.Button(name='Excluir Campanha', button_type='danger')\n",
+    "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar Campanha', button_type='danger')\n",
     "\n",
     "def on_consultar_campanhas(event):\n",
     "    \"\"\"Consulta campanhas com filtro por instituição, nome, datas e status. Se vazio, retorna todas.\"\"\"\n",
@@ -954,52 +954,64 @@
     "        return pn.pane.Alert(f'❌ Erro ao consultar: {str(e)}', alert_type='danger')\n",
     "\n",
     "def on_criar_campanha(event):\n",
-    "    \"\"\"Cria uma nova campanha\"\"\"\n",
+    "    \"\"\"Cria uma nova campanha com status Planejada\"\"\"\n",
     "    try:\n",
     "        termo_busca = instituicoes_select.value.strip()\n",
     "        \n",
     "        if not termo_busca or not nome_campanha.value:\n",
-    "            pn.state.notifications.warning('Instituição e Nome são obrigatórios!')\n",
+    "            pn.state.notifications.error('❌ Instituição e Nome são obrigatórios!')\n",
     "            return\n",
     "        \n",
-    "        # Busca a instituição exata (não parcial) pelo nome digitado\n",
+    "        if not data_inicio.value or not data_fim.value:\n",
+    "            pn.state.notifications.error('❌ Data de Início e Data de Término são obrigatórias!')\n",
+    "            return\n",
+    "        \n",
+    "        # Busca a instituição com ILIKE (busca parcial, case-insensitive)\n",
     "        cursor = con.cursor()\n",
     "        cursor.execute(\n",
-    "            \"SELECT u.cpf_cnpj FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome = %s\",\n",
-    "            (termo_busca,)\n",
+    "            \"SELECT u.cpf_cnpj, u.nome FROM usuario u JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i WHERE u.nome ILIKE %s\",\n",
+    "            (f\"%{termo_busca}%\",)\n",
     "        )\n",
-    "        result = cursor.fetchone()\n",
-    "        cursor.close()\n",
+    "        results = cursor.fetchall()\n",
     "        \n",
-    "        if not result:\n",
-    "            pn.state.notifications.warning('Instituição não encontrada! Digite o nome exato.')\n",
+    "        if not results:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.error('❌ Instituição não encontrada no banco! Primeiro cadastre a instituição na tela de CRUD.')\n",
     "            return\n",
     "        \n",
-    "        cpf_cnpj_instituicao = result[0]\n",
+    "        if len(results) > 1:\n",
+    "            cursor.close()\n",
+    "            nomes = ', '.join([r[1] for r in results])\n",
+    "            pn.state.notifications.error(f'❌ Múltiplas instituições encontradas: {nomes}. Digite o nome completo ou seja mais específico.')\n",
+    "            return\n",
     "        \n",
+    "        cpf_cnpj_instituicao = results[0][0]\n",
+    "        cursor.close()\n",
+    "        \n",
+    "        # INSERT INTO campanha\n",
     "        cursor = con.cursor()\n",
     "        cursor.execute(\n",
     "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
-    "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
+    "               VALUES (%s, %s, %s, %s, 'Planejada')\"\"\",\n",
     "            (cpf_cnpj_instituicao, nome_campanha.value,\n",
-    "             data_inicio.value, data_fim.value, status_campanha.value)\n",
+    "             data_inicio.value, data_fim.value)\n",
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
-    "        pn.state.notifications.success('Campanha criada com sucesso!')\n",
+    "        pn.state.notifications.success('✅ Campanha criada com sucesso com status Planejada!')\n",
     "        \n",
     "        # Limpar campos\n",
     "        instituicoes_select.value = \"\"\n",
     "        nome_campanha.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
-    "        status_campanha.value = \"Planejada\"\n",
+    "        status_campanha.value = \"N/A\"\n",
     "        \n",
     "    except Exception as e:\n",
     "        con.rollback()\n",
     "        if 'cursor' in locals():\n",
     "            cursor.close()\n",
-    "        pn.state.notifications.error(f'Erro ao criar: {str(e)}')\n",
+    "        pn.state.notifications.error(f'❌ Erro ao criar campanha: {str(e)}')\n",
     "\n",
     "def on_atualizar_campanha(event):\n",
     "    \"\"\"Atualiza uma campanha existente com novos dados\"\"\"\n",
@@ -1053,7 +1065,7 @@
     "        instituicoes_select.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
-    "        status_campanha.value = \"Planejada\"\n",
+    "        status_campanha.value = \"N/A\"\n",
     "        nome_campanha.value = \"\"\n",
     "        \n",
     "    except Exception as e:\n",
@@ -1113,7 +1125,7 @@
     "        nome_campanha.value = \"\"\n",
     "        data_inicio.value = None\n",
     "        data_fim.value = None\n",
-    "        status_campanha.value = \"Planejada\"\n",
+    "        status_campanha.value = \"N/A\"\n",
     "        \n",
     "    except Exception as e:\n",
     "        con.rollback()\n",
