Fixed single graph vallues that should be integers being displayed as floats.

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -696,7 +696,7 @@
     "def grafico_instituicoes():\n",
     "    \"\"\"Gráfico de barras mostrando instituições cadastradas\"\"\"\n",
     "    query = \"\"\"\n",
-    "    SELECT u.nome, COUNT(c.id_campanha) AS campanhas\n",
+    "    SELECT u.nome, COUNT(c.id_campanha)::INTEGER AS campanhas\n",
     "    FROM usuario u\n",
     "    LEFT JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i\n",
     "    LEFT JOIN campanha c ON i.cpf_cnpj_i = c.cpf_cnpj_i\n",
@@ -713,6 +713,15 @@
     "        ax.barh(df[\"nome\"], df[\"campanhas\"], color='#17becf')\n",
     "        ax.set_xlabel(\"Número de Campanhas\")\n",
     "        ax.set_title(\"Campanhas por Instituição\")\n",
+    "        \n",
+    "        # Define ticks inteiros no eixo X\n",
+    "        max_campanhas = df[\"campanhas\"].max()\n",
+    "        ax.set_xticks(range(0, int(max_campanhas) + 2))\n",
+    "        \n",
+    "        # Exibe o valor ao lado da barra (como inteiro)\n",
+    "        for i, v in enumerate(df[\"campanhas\"]):\n",
+    "            ax.text(v + 0.1, i, str(int(v)), va='center')\n",
+    "        \n",
     "        plt.tight_layout()\n",
     "        return pn.pane.Matplotlib(fig, tight=True, sizing_mode='stretch_width')\n",
     "    except Exception as e:\n",
